// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function with Storage Should synth and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_lambda.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "HelloWorld_ServiceRole_DefaultPolicy_80066894": {
        "statement": [
          {
            "actions": [
              "xray:PutTraceSegments",
              "xray:PutTelemetryRecords"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "s3:GetObject*",
              "s3:GetBucket*",
              "s3:List*"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_s3_bucket.HelloWorldBucket_D435D97F.arn}",
              "\${aws_s3_bucket.HelloWorldBucket_D435D97F.arn}/*"
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_lambda": {
        "service_name": "lambda"
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "HelloWorld_LogGroup_948040CF": {
        "name": "/aws/lambda/123e4567-e89b-12d3-TestSpecHelloWorld",
        "retention_in_days": 7,
        "tags": {
          "Name": "Test-HelloWorld",
          "et:grid:EnvironmentName": "Test",
          "et:grid:UUID": "123e4567-e89b-12d3"
        }
      }
    },
    "aws_iam_role": {
      "HelloWorld_ServiceRole_F3F7D8B0": {
        "assume_role_policy": "\${data.aws_iam_policy_document.HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B.json}",
        "managed_policy_arns": [
          "arn:\${data.aws_partition.Partitition.partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
        ],
        "name_prefix": "123e4567-e89b-12d3-lloWorldServiceRole",
        "tags": {
          "Name": "Test-HelloWorld",
          "et:grid:EnvironmentName": "Test",
          "et:grid:UUID": "123e4567-e89b-12d3"
        }
      }
    },
    "aws_iam_role_policy": {
      "HelloWorld_ServiceRole_DefaultPolicy_ResourceRoles0_F82A2883": {
        "name": "TestSpecHelloWorldServiceRoleDefaultPolicy6FFF26AA",
        "policy": "\${data.aws_iam_policy_document.HelloWorld_ServiceRole_DefaultPolicy_80066894.json}",
        "role": "\${aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0.name}"
      }
    },
    "aws_lambda_function": {
      "HelloWorld_7964D1E8": {
        "architectures": [
          "x86_64"
        ],
        "depends_on": [
          "aws_cloudwatch_log_group.HelloWorld_LogGroup_948040CF",
          "data.aws_iam_policy_document.HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B",
          "aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0",
          "data.aws_iam_policy_document.HelloWorld_ServiceRole_DefaultPolicy_80066894",
          "aws_iam_role_policy.HelloWorld_ServiceRole_DefaultPolicy_ResourceRoles0_F82A2883"
        ],
        "environment": {
          "variables": {
          }
        },
        "filename": "assets/HelloWorld_NodejsAsset_04D667C4/9A3227D39E16A36D4510660AB9C595A1/archive.zip",
        "function_name": "123e4567-e89b-12d3-TestSpecHelloWorld",
        "handler": "hello-world.handler",
        "memory_size": 128,
        "role": "\${aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0.arn}",
        "runtime": "nodejs20.x",
        "source_code_hash": "9A3227D39E16A36D4510660AB9C595A1",
        "tags": {
          "Name": "Test-HelloWorld",
          "et:grid:EnvironmentName": "Test",
          "et:grid:UUID": "123e4567-e89b-12d3"
        },
        "timeout": 3,
        "tracing_config": {
          "mode": "Active"
        }
      }
    },
    "aws_s3_bucket": {
      "HelloWorldBucket_D435D97F": {
        "bucket_prefix": "hello-world-testspechelloworldbucket",
        "tags": {
          "Name": "Test-HelloWorldBucket",
          "et:grid:EnvironmentName": "Test",
          "et:grid:UUID": "123e4567-e89b-12d3"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.68.0"
      }
    }
  }
}"
`;

exports[`Function with event rules Should handle dependencies on permissions 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_lambda.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "HelloWorld_ServiceRole_DefaultPolicy_80066894": {
        "statement": [
          {
            "actions": [
              "xray:PutTraceSegments",
              "xray:PutTelemetryRecords"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_lambda": {
        "service_name": "lambda"
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_cloudwatch_event_rule": {
      "HelloWorldRule_4DC52DAE": {
        "name_prefix": "123e4567-e89b-12d3-tSpecHelloWorldRule",
        "schedule_expression": "rate(1 day)",
        "state": "ENABLED",
        "tags": {
          "Name": "Test-HelloWorldRule",
          "et:grid:EnvironmentName": "Test",
          "et:grid:UUID": "123e4567-e89b-12d3"
        }
      }
    },
    "aws_cloudwatch_event_target": {
      "HelloWorldRule_Target0_06A32FED": {
        "arn": "\${aws_lambda_function.HelloWorld_7964D1E8.arn}",
        "rule": "\${aws_cloudwatch_event_rule.HelloWorldRule_4DC52DAE.name}",
        "target_id": "Target0"
      }
    },
    "aws_cloudwatch_log_group": {
      "HelloWorld_LogGroup_948040CF": {
        "name": "/aws/lambda/123e4567-e89b-12d3-TestSpecHelloWorld",
        "retention_in_days": 7,
        "tags": {
          "Name": "Test-HelloWorld",
          "et:grid:EnvironmentName": "Test",
          "et:grid:UUID": "123e4567-e89b-12d3"
        }
      }
    },
    "aws_iam_role": {
      "HelloWorld_ServiceRole_F3F7D8B0": {
        "assume_role_policy": "\${data.aws_iam_policy_document.HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B.json}",
        "managed_policy_arns": [
          "arn:\${data.aws_partition.Partitition.partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
        ],
        "name_prefix": "123e4567-e89b-12d3-lloWorldServiceRole",
        "tags": {
          "Name": "Test-HelloWorld",
          "et:grid:EnvironmentName": "Test",
          "et:grid:UUID": "123e4567-e89b-12d3"
        }
      }
    },
    "aws_iam_role_policy": {
      "HelloWorld_ServiceRole_DefaultPolicy_ResourceRoles0_F82A2883": {
        "name": "TestSpecHelloWorldServiceRoleDefaultPolicy6FFF26AA",
        "policy": "\${data.aws_iam_policy_document.HelloWorld_ServiceRole_DefaultPolicy_80066894.json}",
        "role": "\${aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0.name}"
      }
    },
    "aws_lambda_function": {
      "HelloWorld_7964D1E8": {
        "architectures": [
          "x86_64"
        ],
        "depends_on": [
          "aws_cloudwatch_log_group.HelloWorld_LogGroup_948040CF",
          "data.aws_iam_policy_document.HelloWorld_ServiceRole_AssumeRolePolicy_BA710C6B",
          "aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0",
          "data.aws_iam_policy_document.HelloWorld_ServiceRole_DefaultPolicy_80066894",
          "aws_iam_role_policy.HelloWorld_ServiceRole_DefaultPolicy_ResourceRoles0_F82A2883"
        ],
        "environment": {
          "variables": {
          }
        },
        "filename": "assets/HelloWorld_NodejsAsset_04D667C4/9A3227D39E16A36D4510660AB9C595A1/archive.zip",
        "function_name": "123e4567-e89b-12d3-TestSpecHelloWorld",
        "handler": "hello-world.handler",
        "memory_size": 128,
        "role": "\${aws_iam_role.HelloWorld_ServiceRole_F3F7D8B0.arn}",
        "runtime": "nodejs20.x",
        "source_code_hash": "9A3227D39E16A36D4510660AB9C595A1",
        "tags": {
          "Name": "Test-HelloWorld",
          "et:grid:EnvironmentName": "Test",
          "et:grid:UUID": "123e4567-e89b-12d3"
        },
        "timeout": 3,
        "tracing_config": {
          "mode": "Active"
        }
      }
    },
    "aws_lambda_permission": {
      "HelloWorldRule_AllowEventRuleTestSpecHelloWorld767917F5_DAC75690": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.HelloWorld_7964D1E8.arn}",
        "principal": "events.amazonaws.com",
        "source_arn": "\${aws_cloudwatch_event_rule.HelloWorldRule_4DC52DAE.arn}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.68.0"
      }
    }
  }
}"
`;
